--- a/HTML/2.anchor.html
+++ b/HTML/2.anchor.html
@@ -15,14 +15,20 @@
         <!-- href pointing to another anchor in same page (using name attribute) -->
         <a href="#bottom">Test</a>
 
-
         <!-- link to email address -->
-        <a href="mailto:someone@example.com?Subject=Hello%20again">Send mail!</a>
-        <a href="mailto:someone@example.com?cc=someoneelse@example.com&bcc=andsomeoneelse@example.com
+        <a href="mailto:test@gmail.com?Subject=hi">Send mail!</a>
+        <a href="mailto:test@gmail.com?cc=test1@gmail.com&bcc=test2@gmail.com
         &subject=Summer%20Party&body=You%20are%20invited%20to%20a%20big%20summer%20party!">Send mail!</a>
 
         <!-- link to javascript -->
         <a name="bottom" href="javascript:alert('Hello World!');">Execute JavaScript</a>
+
+        <!-- 3 states (active, visited, unvisited) -->
+
+        <!-- target (_blank|_self|_parent|_top|framename) -->
+
+        <!-- download Vs href: refer an image --> 
+
 
     </body>
 </html>
