Updated course content for 9th

--- a/HTML/9-Aug/table.html
+++ b/HTML/9-Aug/table.html
@@ -5,17 +5,34 @@
         <title>Table</title>
     </head>
     <body>
-        <table>
-            <tr>
-                <td>R1, C1</td>
-                <td>R1, C2</td>
-            </tr>
-            
-            <tr>
-                <td>R2, C1</td>
-                <td>R2, C2</td>
-            </tr>
-        </table>
+        <table cellpadding = "5" cellspacing="5" border="1" bordercolor="green" bgcolor="yellow" background="bg.png">
+                <caption>Different people in my family</caption>
+                <thead>
+                    <th>S.No</th>
+                    <th>Name</th>
+                    <th>Pro</th>
+                </thead>
+                <tr>
+                    <td>1</td>
+                    <td>Viswanath</td>
+                    <td>Engineer</td>
+                </tr>
+                <tr>
+                    <td>2</td>
+                    <td>Vikram</td>
+                    <td>Teacher</td>
+                </tr>
+                <tr>
+                    <td>3</td>
+                    <td>Arun</td>
+                    <td>Doctor</td>
+                </tr>
+                <tr>
+                    <td>4</td>
+                    <td>Mahesh</td>
+                    <td>Lawyer</td>
+                </tr>
+            </table>
 
         <!-- /////////////////////////////////////////////////////////////////////////////////// -->
         <!-- Border -->
