Added proper comments

--- a/HTML/9-Aug/table.html
+++ b/HTML/9-Aug/table.html
@@ -5,6 +5,7 @@
         <title>Table</title>
     </head>
     <body>
+        <!-- //////////////////////////////Basic Table///////////////////////////////////////////////////// -->
         <table cellpadding = "5" cellspacing="5" border="1" bordercolor="green" bgcolor="yellow" background="bg.png">
                 <caption>Different people in my family</caption>
                 <thead>
@@ -34,22 +35,18 @@
                 </tr>
             </table>
 
-        <!-- /////////////////////////////////////////////////////////////////////////////////// -->
-        <!-- Border -->
+        <!-- //////////////////////////////Border///////////////////////////////////////////////////// -->
         <!--
             <table border="1">
         -->    
 
-        <!-- /////////////////////////////////////////////////////////////////////////////////// -->
-        <!-- BG Color and Border Color -->
+        <!-- //////////////////////////////BG Color and Border Color//////////////////////////////////////////////// -->
         <!-- <table border = "1" bordercolor = "green" bgcolor = "yellow"></table> -->
 
-        <!-- /////////////////////////////////////////////////////////////////////////////////// -->
-        <!-- backgorund Image -->
+        <!-- //////////////////////////////backgorund Image///////////////////////////////////////////////////// -->
         <!-- <table border = "1" bordercolor = "green" background = "bg.png"> -->
 
-            <!-- /////////////////////////////////////////////////////////////////////////////////// -->
-        <!-- Table Head -->
+        <!-- ///////////////////////////////<TH>//////////////////////////////////////////////////// -->
         <!--
             <tr>
                 <th>Name</th>
@@ -57,18 +54,15 @@
             </tr>
         -->
 
-        <!-- /////////////////////////////////////////////////////////////////////////////////// -->
-        <!-- Cell Spacing and Cell Padding -->
+        <!-- /////////////////////////////Cell Spacing and Cell Padding////////////////////////////////////////////////////// -->
         <!--
             <table border = "1" cellpadding = "5" cellspacing = "5">
         -->
 
-        <!-- /////////////////////////////////////////////////////////////////////////////////// -->
-        <!-- Height and Width -->
+        <!-- /////////////////////////////Height and Width////////////////////////////////////////////////////// -->
         <!-- <table border = "1" width = "400" height = "150"> -->
 
-        <!-- /////////////////////////////////////////////////////////////////////////////////// -->
-        <!-- Col/Row Span -->
+        <!-- /////////////////////////////Col/Row Span////////////////////////////////////////////////////// -->
         <!-- <table border = "1">
             <tr>
                 <th>Column 1</th>
@@ -90,8 +84,7 @@
         </table> -->
 
 
-        <!-- /////////////////////////////////////////////////////////////////////////////////// -->
-        <!-- Caption -->
+        <!-- //////////////////////////////Caption///////////////////////////////////////////////////// -->
         <!-- <table border = "1" width = "100%">
             <caption>This is the caption</caption>            
             <tr>
@@ -103,8 +96,7 @@
             </tr>
         </table> -->
 
-        <!-- /////////////////////////////////////////////////////////////////////////////////// -->
-        <!-- Thead / Tbody / Tfoot  -->
+        <!-- ///////////////////////////////Thead / Tbody / Tfoot//////////////////////////////////////////////////// -->
         <!-- <table border = "1" width = "100%">
             <thead>
                 <tr>
