Updated content after todays class

--- a/HTML/10-Aug/image-mapping.html
+++ b/HTML/10-Aug/image-mapping.html
@@ -1,27 +1,17 @@
 <img border="5" src="bg.png" alt="this is supposed to be a Cat image" title="I am a good cat" height="150" width="150"/>
 
-<!-- <p>
-    Lorem Ipsum 
-    <img align="right" src="bg.png" alt="Smiley face" width="42" height="42"> 
-    used for checking alignment
-</p> -->
-<!-- align can be: top, bottom, middle, left, right -->
-
-<!-- border="5" -->
-
-
-<!-- server maps -->
+<!-- /////////////////////server maps////////////////////// -->
 <!-- <a href="/action_page.php">
     <img src="bg.png" alt="server maping to send co-ordinates" width="150" height="150" ismap>
 </a> -->
 
 
-<!-- client maps -->
+<!-- ///////////////////client maps/////////////////////////// -->
 <!-- <img src="bg.png" width="150" height="150" alt="anotomy" usemap="#catmap">
 
 <map name="catmap">
-    <area shape="circle" coords="90,58,20" href="eye.html" alt="Mercury">
-    <area shape="rect" coords="70,70,150,150" href="mouth.htm" alt="Sun">
+    <area shape="circle" coords="90,58,20" href="eye.html">
+    <area shape="rect" coords="70,70,150,150" href="mouth.htm">
 </map> -->
 
 
