--- a/HTML/10-Aug/marquee.html
+++ b/HTML/10-Aug/marquee.html
@@ -1,7 +1,9 @@
-<!-- <marquee>I will scroll</marquee> -->
+<h1>Hello</h1>
+
+<!-- <marquee width="400">Hello</marquee> -->
 
 <!-- //////////////////////////////Marquee with Width///////////////////////////////////////////////////// -->
-<!-- <marquee width="200px" loop="2">I will scroll</marquee> -->
+<!-- <marquee width="200px">I will scroll</marquee> -->
 
 
 <!-- //////////////////////////////Marquee with direction///////////////////////////////////////////////////// -->
@@ -37,5 +39,11 @@
 <!-- <marquee behavior="slide" width="400"> This is slide behavior of a marquee </marquee> -->
 
 <!-- //////////////////////////////Events///////////////////////////////////////////////////// -->
-<!-- <marquee onmouseover="this.stop()" onmouseout="this.start()">This marquee will stop on mouseover.</marquee>
-<marquee onclick="this.stop()" ondblclick="this.start()">This marquee will stop on mouseclick and start on double click. </marquee> -->
+<!-- <marquee onmouseover="this.stop()" onmouseout="this.start()">
+        <img border="5" src="s1.jpeg" alt="this is supposed to be a Cat image" title="I am a Senary1" width="737"/>
+        <img border="5" src="s2.jpg" alt="this is supposed to be a Cat image" title="I am senery2" width="737"/>
+</marquee>
+<marquee onclick="this.stop()" ondblclick="this.start()">
+        <img border="5" src="s1.jpeg" alt="this is supposed to be a Cat image" title="I am a Senary1" width="737"/>
+        <img border="5" src="s2.jpg" alt="this is supposed to    
+</marquee> -->
