--- a/HTML/10-Aug/pre.html
+++ b/HTML/10-Aug/pre.html
@@ -1,18 +1,18 @@
-<pre>
+<!-- <pre>
         _          _
        (.&lt;        &gt;.)
-      \(_)________( \
-       (___________)\\
-          (     )     \
+      /(_)________( \
+    //(___________)\\
+   /      (     )     \
            |   |
            |   |
            |   |
           _|   |_
          (_______)
-</pre>
+</pre> -->
 
-<!-- 
-<pre>
+<!-- /////////////// Javascript ///////// -->
+<!-- <pre>
     <code>
         function init(){
             var <var>h1tags</var> = document.getElementsByTagName("h1");
@@ -20,3 +20,29 @@
         }
     </code>
 </pre> -->
+
+<!-- /////////////// HTML ///////////// -->
+<!-- <table width="100%" bgcolor="yellow">
+    <tr>
+        <td>
+            this is a simple table
+            <pre>
+                &lt;table&gt;
+                    &lt;tr&gt;
+                        &lt;td&gt;1&lt;/td&gt;
+                        &lt;td&gt;Viswanath&lt;/td&gt;
+                    &lt;/tr&gt;
+                &lt;/table&gt;
+            </pre>
+        </td>
+        <td>
+            <table>
+                <tr>
+                    <td>1</td>
+                    <td>Viswanath</td>
+                </tr>
+            </table>
+        </td>
+    </tr>
+</table> -->
+
