Course content for 11th Aug

--- a/HTML/11-Aug/iframe/iframe.html
+++ b/HTML/11-Aug/iframe/iframe.html
@@ -1,10 +1,8 @@
-<iframe src="http://www.v4viswanath.com">
+<!-- <iframe src="http://www.GOOGLE.com"> -->
 
 
-
-
-
-<!-- <iframe src="http://www.v4viswanath.com" width="100%" height="300px" name="mysite">
+<!-- 
+<iframe src="http://www.v4viswanath.com" width="100%" height="100%">
     <p>Your browser does not support iframes.</p>
 </iframe> -->
 
@@ -22,4 +20,4 @@ allow-pointer-lock:	Re-enables APIs
 allow-popups:	Re-enables popups
 allow-same-origin:	Allows the iframe content to be treated as being from the same origin
 allow-scripts:	Re-enables scripts
-allow-top-navigation:	Allows the iframe content to navigate its top-level browsing context -->    
+allow-top-navigation:	Allows the iframe content to navigate its top-level browsing context     -->
