--- a/HTML/11-Aug/iframe/sandbox.html
+++ b/HTML/11-Aug/iframe/sandbox.html
@@ -2,7 +2,7 @@
 <html>
 <body>
 
-    <iframe src="script-restriction.html" sandbox>
+    <iframe src="script-restriction.html" sandbox="allow-scripts">
         <p>Your browser does not support iframes.</p>
     </iframe>
 
