--- a/HTML/11-Aug/iframe/script-restriction.html
+++ b/HTML/11-Aug/iframe/script-restriction.html
@@ -2,9 +2,7 @@
 <html>
 <body>
 <script>
-
-var d=new Date();   
-document.write(d);
+    document.write("hEY iM WORKING");
 </script>
 </body>
 </html>
