--- a/HTML/Aug 11,13/form.html
+++ b/HTML/Aug 11,13/form.html
@@ -7,8 +7,13 @@
 <!-- ///////////// Form Elements ////////////////// -->
 
 
-<!-- <input type="text" value="Enter username"/>
-<input type="password"/>
+<form action="http://localhost:3333/calc">
+    <input type="text" name="a" value=""/>
+    <input type="password" name="b" value=""/>
+    <input type="submit" value="Login"/>
+    <input type="reset" value="Reset"/>
+</form>
+<!-- <input type="password"/>
 <input type="submit"/>
 <input type="reset"/> <br/>
 <input name="gender" type="radio"/> Male
@@ -77,7 +82,7 @@
 <!-- <input type="file" name="myFile"> -->
 
 <!-- Color -->
-<input type="color" name="favcolor">
+<!-- <input type="color" name="favcolor"> -->
 
 
 <!-- ///////////////////Fieldset///////////////////////// -->
