--- a/HTML/11-Aug/form.html
+++ b/HTML/11-Aug/form.html
@@ -5,38 +5,9 @@
 <!-- target -->
 
 <!-- ///////////// Form Elements ////////////////// -->
-<form>
-<fieldset>
-<table>
-    <legend>Form</legend>
-    <tr>
-        <td>Username:</td>
-        <td><input type="text" maxlength="5"/></td>
-    </tr>
-    <tr>
-        <td>Password:</td>
-        <td><input type="password"/></td>
-    </tr>
-    <tr>
-        <td><label for="gender">Gender</label></td>
-        <td>
-            <label for="gender">Male</label> <input name="gender" type="radio" />
-            <label for="gender">Female</label> <input name="gender" type="radio" />
-        </td>
-    </tr>
-    <tr>
-        <td>Cover Letter</td>
-        <td><textarea rows="10" cols="30"></textarea></td>
-    </tr>
-    <tr>
-        <td></td>
-        <td><input type="submit"/></td>
-    </tr>
-</table> 
 
-</fieldset>
-</form>
- 
+<input type="text"/>
+
 
 <!-- <form action="http://localhost:3333/calc">
     <input type="text" name="a" value=""/>
@@ -44,7 +15,6 @@
     <input type="submit" value="Login"/>
     <input type="reset" value="Reset"/>
 </form> -->
-
 <!-- <input type="password"/>
 <input type="submit"/>
 <input type="reset"/> <br/>
@@ -61,6 +31,7 @@
 <!-- max, min -->
 <!-- maxlength -->
 <!-- size -->
+<!-- placeholder -->
 
 <!-- <select name="cars">
     <option value="volvo">Volvo</option>
